--- a/vsa/HRR.ipynb
+++ b/vsa/HRR.ipynb
@@ -1752,6 +1752,179 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Threshold estimate experiment\n",
+    "============================"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/disk/users/lesi/HBP/local/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running\n",
+      "(0.17, 2, 1.0)\n",
+      "(0.17, 3, 1.0)\n",
+      "(0.17, 4, 1.0)\n",
+      "(0.17, 5, 1.0)\n",
+      "(0.17, 6, 1.0)\n",
+      "(0.17, 7, 0.9985714285714286)\n",
+      "(0.17, 8, 1.0)\n",
+      "(0.17, 9, 1.0)\n",
+      "(0.17, 10, 1.0)\n",
+      "(0.17, 11, 1.0)\n",
+      "(0.17, 12, 1.0)\n",
+      "(0.17, 13, 1.0)\n",
+      "(0.17, 14, 0.9971428571428571)\n",
+      "(0.17, 15, 0.9973333333333333)\n",
+      "(0.17, 16, 0.996875)\n",
+      "(0.17, 17, 0.9935294117647059)\n",
+      "(0.17, 18, 0.9761111111111112)\n",
+      "(0.17, 19, 0.9626315789473684)\n",
+      "(0.17, 20, 0.945)\n",
+      "(0.17, 21, 0.9228571428571428)\n",
+      "(0.17, 22, 0.894090909090909)\n",
+      "(0.17, 23, 0.8660869565217392)\n",
+      "(0.17, 24, 0.8379166666666666)\n",
+      "(0.17, 25, 0.802)\n",
+      "(0.17, 26, 0.7584615384615385)\n",
+      "(0.17, 27, 0.7103703703703703)\n",
+      "(0.17, 28, 0.7032142857142858)\n",
+      "(0.17, 29, 0.6382758620689655)\n",
+      "(0.17, 30, 0.603)\n",
+      "(0.17, 31, 0.567741935483871)\n",
+      "(0.18000000000000002, 2, 1.0)\n",
+      "(0.18000000000000002, 3, 1.0)\n",
+      "(0.18000000000000002, 4, 1.0)\n",
+      "(0.18000000000000002, 5, 1.0)\n",
+      "(0.18000000000000002, 6, 1.0)\n",
+      "(0.18000000000000002, 7, 1.0)\n",
+      "(0.18000000000000002, 8, 1.0)\n",
+      "(0.18000000000000002, 9, 1.0)\n",
+      "(0.18000000000000002, 10, 1.0)\n",
+      "(0.18000000000000002, 11, 0.9990909090909091)\n",
+      "(0.18000000000000002, 12, 0.9991666666666666)\n",
+      "(0.18000000000000002, 13, 0.9984615384615385)\n",
+      "(0.18000000000000002, 14, 0.9985714285714286)\n",
+      "(0.18000000000000002, 15, 0.99)\n",
+      "(0.18000000000000002, 16, 0.98625)\n",
+      "(0.18000000000000002, 17, 0.9688235294117648)\n",
+      "(0.18000000000000002, 18, 0.9605555555555556)\n",
+      "(0.18000000000000002, 19, 0.9284210526315789)\n",
+      "(0.18000000000000002, 20, 0.909)\n",
+      "(0.18000000000000002, 21, 0.8614285714285714)\n",
+      "(0.18000000000000002, 22, 0.8268181818181818)\n",
+      "(0.18000000000000002, 23, 0.7660869565217392)\n",
+      "(0.18000000000000002, 24, 0.7150000000000001)\n",
+      "(0.18000000000000002, 25, 0.6888000000000001)\n",
+      "(0.18000000000000002, 26, 0.6569230769230769)\n",
+      "(0.18000000000000002, 27, 0.5914814814814815)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "import string\n",
+    "import pickle\n",
+    "import os\n",
+    "from hrr import HRR\n",
+    "%matplotlib inline \n",
+    "import legend\n",
+    "\n",
+    "HRR.reset_kernel()\n",
+    "HRR.set_size(1024)\n",
+    "HRR.return_list = True \n",
+    "\n",
+    "it = 100\n",
+    "steps = 2\n",
+    "threshold = 0.17\n",
+    "theshold_step = 0.01\n",
+    "min_accu = 0.6\n",
+    "\n",
+    "print(\"running\")\n",
+    "\n",
+    "HRR.distance_threshold = threshold\n",
+    "for step in range(steps):\n",
+    "    result = []\n",
+    "    result.append(1)\n",
+    "    bindings = 1\n",
+    "    accu = 1\n",
+    "    while accu > min_accu:\n",
+    "        accu = 0\n",
+    "        miss = 0\n",
+    "        bindings = bindings + 1\n",
+    "        \n",
+    "        for iterate in range(it):\n",
+    "            \n",
+    "            x = np.empty((bindings,2), dtype='|S20')\n",
+    "            for i in range (bindings):\n",
+    "                for j in range(2):\n",
+    "                    x[i][j] = ''.join(random.choice(string.ascii_uppercase + string.digits) for _ in range(10))\n",
+    "\n",
+    "            m = None       \n",
+    "            for i in range(bindings):\n",
+    "                if m is None:\n",
+    "                    m = HRR(x[i][0]) * x[i][1]\n",
+    "                else:\n",
+    "                    new_item = HRR(x[i][0]) * x[i][1]\n",
+    "                    m += new_item   \n",
+    "                    \n",
+    "            for i in range(bindings):\n",
+    "                fault = (not (m / x[i][0])) or (not (m / x[i][1]))\n",
+    "                for e in m / x[i][0]:\n",
+    "                    if (e[0] == x[i][1]):\n",
+    "                        if (e[1] < HRR.distance_threshold):\n",
+    "                            fault = True\n",
+    "                    elif(e[1] >= HRR.distance_threshold):\n",
+    "                        fault = True\n",
+    "                for e in m / x[i][1]:\n",
+    "                    if (e[0] == x[i][0]):\n",
+    "                        if (e[1] < HRR.distance_threshold):\n",
+    "                            fault = True\n",
+    "                    elif(e[1] >= HRR.distance_threshold):\n",
+    "                        fault = True\n",
+    "                if fault:\n",
+    "                    miss += 1\n",
+    "\n",
+    "        result.append(1.0 - (float(miss) / (it * bindings)))\n",
+    "        if result[-1] > accu:\n",
+    "            accu = result[-1]\n",
+    "        print(HRR.distance_threshold,bindings,result[-1])\n",
+    "        HRR.reset_kernel()\n",
+    "        \n",
+    "    d = os.path.dirname(\"data/dim\" + str(HRR.size) + \"/\")\n",
+    "    if not os.path.exists(d):\n",
+    "        os.makedirs(d)\n",
+    "    f = open(d + \"/thresh\" + str(HRR.distance_threshold) + \".dat\", \"w\")\n",
+    "    \n",
+    "    for r in result:\n",
+    "        f.write(str(r))\n",
+    "        f.write(\"\\n\")\n",
+    "    f.close()\n",
+    "    \n",
+    "    HRR.distance_threshold = HRR.distance_threshold + theshold_step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Binding Capacity Experiment - Scalars\n",
